# vm-attest-demo

./: Cargo.toml  demo-vm.sh
src/: lib.rs  socket.rs  vsock.rs
test-data/: platform-id-staging.pem  rot-1-v1.0.38-1.0.38_corim.cbor  sp-v1.0.64-1.0.64_corim.cbor  vm-instance-cfg.json
