[package]
name = "vm-attest-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
attest-data.git = "https://github.com/oxidecomputer/dice-util"
clap = { version = "4.6.0", features = ["derive"] }
clap-verbosity = "2.1.0"
const-oid = { version = "0.9.5", features = ["db"] }
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", features = ["ipcc", "mock"] }
env_logger = "0.11.9"
hubpack = "0.1.2"
libc = "0.2.183"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
vm-attest = { git = "https://github.com/oxidecomputer/vm-attest", rev = "f2184012395b329b09395d1a63a1961a267d1166" }
vsock = "0.5.3"
x509-cert = "0.2.5"
